photo and news update

--- a/index.jade
+++ b/index.jade
@@ -17,17 +17,14 @@ block content
 					.medium-11.medium-centered.columns
 						table.newslist
 							tr
-								td May.&nbsp;'16
+								td Spring&nbsp;'17
+								td Kate and Amanda join the group!
+							tr
+								td Fall&nbsp;'16
+								td Emily, Yeonsoo, and Beth join the group!
+							tr
+								td Summer&nbsp;'16
+								td Annabelle and Aiza present their research at Brandeis University Undergraduate Science Symposium
+							tr
+								td Spring&nbsp;'16
 								td Kristyn and Jackie graduate &ndash; congratulations!
-							tr
-								td Jan.&nbsp;'16
-								td Annabelle and Aiza join the lab &ndash; welcome!
-							tr
-								td Sep.&nbsp;'15
-								td Kristyn joins the lab!
-							tr
-								td May.&nbsp;'15
-								td Areeb and Jackie join the group!
-							tr
-								td Jan.&nbsp;'15
-								td Kyle is selected as the first recipient of the Mount Holyoke College Fund the Future Award!  
