--- a/kb.jade
+++ b/kb.jade
@@ -51,7 +51,7 @@ block content
 								td 2011 
 								td University of California, Berkeley
 								td 
-									a(href='http://chem.berkeley.edu/faculty/emeriti/frechet/') Jean Frech&eacute;t
+									a(href='http://chemistry.berkeley.edu/faculty/emeriti/frechet/') Jean Frech&eacute;t
 							tr 
 								td Postdoc
 								td 2014
