small people fix

--- a/people.jade
+++ b/people.jade
@@ -61,7 +61,7 @@ block content
 	-currentpeople[3].name = "Yeonsoo Kum"
 	-currentpeople[3].year = "2019"
 	-currentpeople[3].majors = ["Chemistry"]
-	-currentpeople[3].nexus = ["Biology"]
+	-currentpeople[3].minors = ["Biology"]
 	
 	-currentpeople.push({"email":"yigza22b"})
 	-currentpeople[4].name = "Beth Yigzaw"
