--- a/people.jade
+++ b/people.jade
@@ -40,43 +40,37 @@ block title
 	meta(name='description',content='Members, past and present, of the Broaders lab.')
 
 block content
-	-var currentpeople = [{"email":"ooi22y"}]
-	-currentpeople[0].name = "Annabelle Ooi"
-	-currentpeople[0].year = "2017"
-	-currentpeople[0].majors = ["Biology"]
-	-currentpeople[0].minors = ["Chemistry"]
-	
-	-currentpeople.push({"email":"malik26a"})
-	-currentpeople[1].name = "Aiza Malik"
-	-currentpeople[1].year = "2018"
-	-currentpeople[1].majors = ["Biochemistry"]
+	-var currentpeople = [{"email":"malik26a"}]
+	-currentpeople[0].name = "Aiza Malik"
+	-currentpeople[0].year = "2018"
+	-currentpeople[0].majors = ["Biochemistry"]
 	
 	-currentpeople.push({"email":"graha22e"})
-	-currentpeople[2].name = "Emily Graham"
-	-currentpeople[2].year = "2019"
-	-currentpeople[2].majors = ["Chemistry"]
-	-currentpeople[2].nexus = ["Engineering"]
+	-currentpeople[1].name = "Emily Graham"
+	-currentpeople[1].year = "2019"
+	-currentpeople[1].majors = ["Chemistry"]
+	-currentpeople[1].nexus = ["Engineering"]
 	
 	-currentpeople.push({"email":"kum22y"})
-	-currentpeople[3].name = "Yeonsoo Kum"
-	-currentpeople[3].year = "2019"
-	-currentpeople[3].majors = ["Chemistry"]
-	-currentpeople[3].minors = ["Biology"]
+	-currentpeople[2].name = "Yeonsoo Kum"
+	-currentpeople[2].year = "2019"
+	-currentpeople[2].majors = ["Chemistry"]
+	-currentpeople[2].minors = ["Biology"]
 	
 	-currentpeople.push({"email":"yigza22b"})
-	-currentpeople[4].name = "Beth Yigzaw"
-	-currentpeople[4].year = "2019"
-	-currentpeople[4].majors = ["Biochemistry"]
+	-currentpeople[3].name = "Beth Yigzaw"
+	-currentpeople[3].year = "2019"
+	-currentpeople[3].majors = ["Biochemistry"]
 	
 	-currentpeople.push({"email":"mazia22k"})
-	-currentpeople[5].name = "Kate Maziarz"
-	-currentpeople[5].year = "2019"
-	-currentpeople[5].majors = ["Chemistry"]
+	-currentpeople[4].name = "Kate Maziarz"
+	-currentpeople[4].year = "2019"
+	-currentpeople[4].majors = ["Chemistry"]
 	
 	-currentpeople.push({"email":"manas22a"})
-	-currentpeople[6].name = "Amanda Manaster"
-	-currentpeople[6].year = "2019"
-	-currentpeople[6].majors = ["Biochemistry"]
+	-currentpeople[5].name = "Amanda Manaster"
+	-currentpeople[5].year = "2019"
+	-currentpeople[5].majors = ["Biochemistry"]
 	
 	-var pastpeople = [{"email":"khich22m"}]
 	-pastpeople[0].name = "Areeb Khichi"
@@ -84,18 +78,24 @@ block content
 	-pastpeople[0].majors = ["Chemistry"]
 	-pastpeople[0].minors = ["Mathematics"]
 	
-	-pastpeople.push({"email":"norri22k"})
-	-pastpeople[1].name = "Kristyn Norris"
-	-pastpeople[1].year = "2016"
-	-pastpeople[1].majors = ["Biochemistry"]
-	-pastpeople[1].current = "Ph.D. Student at UMass Worcester"
+	-pastpeople.push({"email":"ooi22y"})
+	-pastpeople[1].name = "Annabelle Ooi"
+	-pastpeople[1].year = "2017"
+	-pastpeople[1].majors = ["Biology"]
+	-pastpeople[1].minors = ["Chemistry"]
 	
-	-pastpeople.push({"email":"long24j"})
-	-pastpeople[2].name = "Jackie Long"
+	-pastpeople.push({"email":"norri22k"})
+	-pastpeople[2].name = "Kristyn Norris"
 	-pastpeople[2].year = "2016"
 	-pastpeople[2].majors = ["Biochemistry"]
-	-pastpeople[2].minors = ["Statistics"]
-	-pastpeople[2].current = "Medical student"
+	-pastpeople[2].current = "Ph.D. Student at UMass Worcester"
+	
+	-pastpeople.push({"email":"long24j"})
+	-pastpeople[3].name = "Jackie Long"
+	-pastpeople[3].year = "2016"
+	-pastpeople[3].majors = ["Biochemistry"]
+	-pastpeople[3].minors = ["Statistics"]
+	-pastpeople[3].current = "Medical student"
 	
 	
 	-var imgdir = "images/members/"
