Added yan22v, fixed typo

--- a/people.jade
+++ b/people.jade
@@ -72,6 +72,12 @@ block content
 	-currentpeople[5].year = "2019"
 	-currentpeople[5].majors = ["Biochemistry"]
 	
+	-currentpeople.push({"email":"yan22v"})
+	-currentpeople[6].name = "Victoria Yan"
+	-currentpeople[6].year = "2019"
+	-currentpeople[6].majors = ["Chemistry"]
+	-currentpeople[6].minors = ["Philosophy"]
+
 	-var pastpeople = [{"email":"khich22m"}]
 	-pastpeople[0].name = "Areeb Khichi"
 	-pastpeople[0].year = "2018"
