Added Catherine and Sherry. Updated news. Minor changes to application link and page.

--- a/opportunities.jade
+++ b/opportunities.jade
@@ -13,5 +13,5 @@ block content
 		.large-12.columns
 			.panel.radius
 				h3 Research opportunities
-				p I am currently taking applications for students wanting to join during the Spring 2018 semester. If you think that you might be interested, please fill out the form below.
+				p If you think that you might be interested in joining the group, please fill out the form below.
 				iframe(src="https://docs.google.com/forms/d/1y194IhX0Y0Nf7vjYnX105jk_olo30Vfb19iZGWuQxU8/viewform?embedded=true" width="100%" height="1300" frameborder="0" marginheight="0" marginwidth="0") Loading...
