--- a/people.jade
+++ b/people.jade
@@ -64,7 +64,7 @@ block content
 	
 	-currentpeople.push({"email":"mazia22k"})
 	-currentpeople[4].name = "Kate Maziarz"
-	-currentpeople[4].year = "2019"
+	-currentpeople[4].year = "2018"
 	-currentpeople[4].majors = ["Chemistry"]
 	
 	-currentpeople.push({"email":"manas22a"})
@@ -77,6 +77,16 @@ block content
 	-currentpeople[6].year = "2019"
 	-currentpeople[6].majors = ["Chemistry"]
 	-currentpeople[6].minors = ["Philosophy"]
+
+	-currentpeople.push({"email":"peabo22c"})
+	-currentpeople[7].name = "Catherine Peabody"
+	-currentpeople[7].year = "2020"
+	-currentpeople[7].majors = ["Biology","East Asian Studies"]
+
+	-currentpeople.push({"email":"yang36x"})
+	-currentpeople[8].name = "Xueyi (Sherry) Yang"
+	-currentpeople[8].year = "2020"
+	-currentpeople[8].majors = ["Biochemistry"]
 
 	-var pastpeople = [{"email":"khich22m"}]
 	-pastpeople[0].name = "Areeb Khichi"
