--- a/index.jade
+++ b/index.jade
@@ -17,14 +17,14 @@ block content
 					.medium-11.medium-centered.columns
 						table.newslist
 							tr
+								td Spring&nbsp;'18
+								td Catherine and Sherry join the group!
+							tr
+								td Fall&nbsp;'17
+								td Amanda wins 2nd place at the next-in-BIO poster competition at WPI. Congratulations!
+							tr
+								td Fall&nbsp;'17
+								td Victoria joins the group!
+							tr
 								td Spring&nbsp;'17
 								td Kate and Amanda join the group!
-							tr
-								td Fall&nbsp;'16
-								td Emily, Yeonsoo, and Beth join the group!
-							tr
-								td Summer&nbsp;'16
-								td Annabelle and Aiza present their research at Brandeis University Undergraduate Science Symposium
-							tr
-								td Spring&nbsp;'16
-								td Kristyn and Jackie graduate &ndash; congratulations!
