news update, lab member update, opportunities update

--- a/index.jade
+++ b/index.jade
@@ -17,14 +17,10 @@ block content
 					.medium-11.medium-centered.columns
 						table.newslist
 							tr
-								td Spring&nbsp;'18
-								td Catherine and Sherry join the group!
+								td July '18
+								td Our NSF RUI on 
+									a(href='https://www.nsf.gov/awardsearch/showAward?AWD_ID=1808073') "Boronic Ester Modified Polysaccharides for Oxidation-Responsive Delivery Applications"
+									| &#32;was funded!
 							tr
-								td Fall&nbsp;'17
-								td Amanda wins 2nd place at the next-in-BIO poster competition at WPI. Congratulations!
-							tr
-								td Fall&nbsp;'17
-								td Victoria joins the group!
-							tr
-								td Spring&nbsp;'17
-								td Kate and Amanda join the group!
+								td May '18
+								td Aiza and Victoria graduate &ndash; Congratulations!
