--- a/layout.jade
+++ b/layout.jade
@@ -16,8 +16,8 @@ html.no-js(lang='en')
 		unless pageid == "opportunities"
 			.row
 				.large-12.columns
-					a.footer(href='opportunities.html')
-							| Interested&nbsp;in&nbsp;joining? Click&nbsp;here&nbsp;to&nbsp;find&nbsp;out&nbsp;more!
+					a.footer(href='https://docs.google.com/forms/d/e/1FAIpQLSf9HgCdIzj28ivYKCR52nz6ZtDW2uewxBJBC3wXgCEwAJ8g2A/viewform?usp=sf_link' target='_blank')
+							| Interested&nbsp;in&nbsp;joining? Now&nbsp;accepting&nbsp;applications&nbsp;for the&nbsp;spring&nbsp;of&nbsp;2019! Apply here.
 
 		script(src='js/app.min.js')
 		script.
