--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -55,7 +55,7 @@
 // $default-float: left;
 
 // We use these as default colors throughout
- $primary-color: #2255EE;
+ $primary-color: #07c;
  $secondary-color: #A10808;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
