--- a/layout.jade
+++ b/layout.jade
@@ -13,12 +13,12 @@ html.no-js(lang='en')
 		block vars
 		include NavBar
 		block content
-		unless pageid == "opportunities"
-			.row
-				.large-12.columns
-					a.footer(href='https://docs.google.com/forms/d/e/1FAIpQLSf9HgCdIzj28ivYKCR52nz6ZtDW2uewxBJBC3wXgCEwAJ8g2A/viewform?usp=sf_link' target='_blank')
-							| Interested&nbsp;in&nbsp;joining? Now&nbsp;accepting&nbsp;applications&nbsp;for the&nbsp;spring&nbsp;of&nbsp;2019! Apply here.
-
+//		unless pageid == "opportunities"
+//			.row
+//				.large-12.columns
+//					a.footer(href='https://docs.google.com/forms/d/e/1FAIpQLSf9HgCdIzj28ivYKCR52nz6ZtDW2uewxBJBC3wXgCEwAJ8g2A/viewform?usp=sf_link' target='_blank')
+//							| Interested&nbsp;in&nbsp;joining? Now&nbsp;accepting&nbsp;applications&nbsp;for the&nbsp;spring&nbsp;of&nbsp;2019! Apply here.
+//
 		script(src='js/app.min.js')
 		script.
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
