added new members, fixed broken js

--- a/index.jade
+++ b/index.jade
@@ -17,6 +17,12 @@ block content
 					.medium-11.medium-centered.columns
 						table.newslist
 							tr
+								td Jan '19
+								td Welcome to our newest members, Ariel, Abby, and Maegan!
+							tr
+								td Dec '18
+								td Congratulations to Kate on graduating!
+							tr
 								td July '18
 								td Our NSF RUI on 
 									a(href='https://www.nsf.gov/awardsearch/showAward?AWD_ID=1808073') "Boronic Ester Modified Polysaccharides for Oxidation-Responsive Delivery Applications"
