--- a/people.jade
+++ b/people.jade
@@ -48,25 +48,35 @@ block content
 	-currentpeople[0].majors = ["Chemistry"]
 	-currentpeople[0].nexus = ["Engineering"]
 	
-	-currentpeople.push({"email":"mazia22k"})
-	-currentpeople[1].name = "Kate Maziarz"
-	-currentpeople[1].year = "2018"
-	-currentpeople[1].majors = ["Chemistry"]
-	
 	-currentpeople.push({"email":"manas22a"})
-	-currentpeople[2].name = "Amanda Manaster"
-	-currentpeople[2].year = "2019"
-	-currentpeople[2].majors = ["Biochemistry"]
+	-currentpeople[1].name = "Amanda Manaster"
+	-currentpeople[1].year = "2019"
+	-currentpeople[1].majors = ["Biochemistry"]
 
 	-currentpeople.push({"email":"peabo22c"})
-	-currentpeople[3].name = "Catherine Peabody"
-	-currentpeople[3].year = "2020"
-	-currentpeople[3].majors = ["Biology","East Asian Studies"]
+	-currentpeople[2].name = "Catherine Peabody"
+	-currentpeople[2].year = "2020"
+	-currentpeople[2].majors = ["Biology","East Asian Studies"]
 
 	-currentpeople.push({"email":"yang36x"})
-	-currentpeople[4].name = "Xueyi (Sherry) Yang"
-	-currentpeople[4].year = "2020"
-	-currentpeople[4].majors = ["Biochemistry"]
+	-currentpeople[3].name = "Xueyi (Sherry) Yang"
+	-currentpeople[3].year = "2020"
+	-currentpeople[3].majors = ["Biochemistry"]
+	
+	-currentpeople.push({"email":"kapla26a"})
+	-currentpeople[4].name = "Abby Kaplan"
+	-currentpeople[4].year = "2021"
+	-currentpeople[4].majors = ["Chemistry"]
+	
+	-currentpeople.push({"email":"kimbe22a"})
+	-currentpeople[5].name = "Ariel Kimberley"
+	-currentpeople[5].year = "2021"
+	-currentpeople[5].majors = ["Biology, Spanish"]
+	
+	-currentpeople.push({"email":"windu22m"})
+	-currentpeople[6].name = "Maegan Windus"
+	-currentpeople[6].year = "2021"
+	-currentpeople[6].majors = ["Chemistry, Biology"]
 
 	-var pastpeople = [{"email":"khich22m"}]
 	-pastpeople[0].name = "Areeb Khichi"
@@ -114,6 +124,11 @@ block content
 	-pastpeople[7].name = "Beth Yigzaw"
 	-pastpeople[7].year = "2019"
 	-pastpeople[7].majors = ["Biochemistry"]
+	
+	-pastpeople.push({"email":"mazia22k"})
+	-pastpeople[8].name = "Kate Maziarz"
+	-pastpeople[8].year = "2018"
+	-pastpeople[8].majors = ["Chemistry"]
 	
 	-var imgdir = "images/members/"
 	.row
