Added HS application. Updated ALK profile

--- a/layout.jade
+++ b/layout.jade
@@ -23,7 +23,14 @@ html.no-js(lang='en')
 			
 			ga('create', 'UA-62643104-1', 'auto');
 			ga('send', 'pageview');
-			
+
+		unless pageid == "opportunities"
+			.row
+				.large-12.columns
+					a.footer(href='https://goo.gl/forms/ErFgiFnd6kMiWh9H2' target='_blank')
+							| Now hiring for 2019 Summer High School Internship. Apply here!
+
+//			
 //		unless pageid == "opportunities"
 //			.row
 //				.large-12.columns
