--- a/people.jade
+++ b/people.jade
@@ -67,6 +67,7 @@ block content
 	-currentpeople[4].name = "Abby Kaplan"
 	-currentpeople[4].year = "2021"
 	-currentpeople[4].majors = ["Chemistry"]
+	-currentpeople[4].minors = ["Gender Studies"]
 	
 	-currentpeople.push({"email":"kimbe22a"})
 	-currentpeople[5].name = "Ariel Kimberley"
