--- a/layout.jade
+++ b/layout.jade
@@ -24,16 +24,9 @@ html.no-js(lang='en')
 			ga('create', 'UA-62643104-1', 'auto');
 			ga('send', 'pageview');
 
+			
 		unless pageid == "opportunities"
 			.row
 				.large-12.columns
-					a.footer(href='https://goo.gl/forms/ErFgiFnd6kMiWh9H2' target='_blank')
-							| Now hiring for 2019 Summer High School Internship. Apply here!
-
-//			
-//		unless pageid == "opportunities"
-//			.row
-//				.large-12.columns
-//					a.footer(href='https://docs.google.com/forms/d/e/1FAIpQLSf9HgCdIzj28ivYKCR52nz6ZtDW2uewxBJBC3wXgCEwAJ8g2A/viewform?usp=sf_link' target='_blank')
-//							| Interested&nbsp;in&nbsp;joining? Now&nbsp;accepting&nbsp;applications&nbsp;for the&nbsp;spring&nbsp;of&nbsp;2019! Apply here.
-//
+					a.footer(href='https://docs.google.com/forms/d/e/1FAIpQLSf9HgCdIzj28ivYKCR52nz6ZtDW2uewxBJBC3wXgCEwAJ8g2A/viewform?usp=sf_link' target='_blank')
+							| Interested&nbsp;in&nbsp;joining? Now&nbsp;accepting&nbsp;applications&nbsp;for the&nbsp;fall&nbsp;of&nbsp;2020! Apply here.
