Fixed KB mentors, added QZ, added paper

--- a/index.jade
+++ b/index.jade
@@ -17,6 +17,14 @@ block content
 					.medium-11.medium-centered.columns
 						table.newslist
 							tr
+								td Apr '19
+								td Emily's 
+									a(href='https://doi.org/10.1021/acs.biomac.9b00215') paper on spirocyclic acetalated dextran
+									| &#32;has been accepted to Biomacromolecules!
+							tr
+								td Mar '19
+								td Welcome to our newest member, Tracy!
+							tr
 								td Jan '19
 								td Welcome to our newest members, Ariel, Abby, and Maegan!
 							tr
@@ -27,6 +35,3 @@ block content
 								td Our NSF RUI on 
 									a(href='https://www.nsf.gov/awardsearch/showAward?AWD_ID=1808073') "Boronic Ester Modified Polysaccharides for Oxidation-Responsive Delivery Applications"
 									| &#32;was funded!
-							tr
-								td May '18
-								td Aiza and Victoria graduate &ndash; Congratulations!
