--- a/kb.jade
+++ b/kb.jade
@@ -45,19 +45,19 @@ block content
 								td 2006 
 								td Swarthmore College
 								td 
-									a(href='http://www.swarthmore.edu/profile/robert-paley') Robert Paley
+									a(href='http://www.swarthmore.edu/profile/robert-paley', target="_blank") Robert Paley
 							tr 
 								td Ph.D. 
 								td 2011 
 								td University of California, Berkeley
 								td 
-									a(href='http://chemistry.berkeley.edu/faculty/emeriti/frechet/') Jean Frech&eacute;t
+									a(href='https://chemistry.berkeley.edu/faculty/chem/emeriti/fr%C3%A9chet', target="_blank") Jean Frech&eacute;t
 							tr 
 								td Postdoc
 								td 2014
 								td University of California, San Francisco
 								td 
-									a(href='http://www.gartnerlab.ucsf.edu/') Zev Gartner
+									a(href='https://pharmacy.ucsf.edu/zev-gartner', target="_blank") Zev Gartner
 						h5 Interests
 						p Throughout his career, Kyle has focused on the interplay between living tissues and their material world. He uses controllable synthetic and polymer chemistry to better understand the relationship between cells and their surroundings. 
 						dl.accordion(data-accordion="")
