--- a/people.jade
+++ b/people.jade
@@ -78,6 +78,11 @@ block content
 	-currentpeople[6].name = "Maegan Windus"
 	-currentpeople[6].year = "2021"
 	-currentpeople[6].majors = ["Chemistry, Biology"]
+	
+	-currentpeople.push({"email":"zheng26q"})
+	-currentpeople[7].name = "Tracy Zheng"
+	-currentpeople[7].year = "2021"
+	-currentpeople[7].majors = ["Biochemistry"]
 
 	-var pastpeople = [{"email":"khich22m"}]
 	-pastpeople[0].name = "Areeb Khichi"
