--- a/publications.jade
+++ b/publications.jade
@@ -6,7 +6,7 @@ block vars
 mixin listpubs(pubs)
 	each pub,index in pubs
 		li
-			a(href='http://dx.doi.org/'+pub["doi"], target="_blank") #{pub["title"]}
+			a(href='https://doi.org/'+pub["doi"], target="_blank") #{pub["title"]}
 			br
 			|  !{pub["authors"]}. 
 			em #{pub["journal"]}
@@ -106,6 +106,12 @@ block content
 	-publist[13].journal = "Integr. Biol."
 	-publist[13].datepage = "2015, 7, 1611-1621"
 	-publist[13].doi = "10.1039/C5IB00240K"
+	
+	-publist.push({"title":"Spirocyclic acetal-modified dextran as a flexible pH-sensitive solubility switching material"})
+	-publist[14].authors = "E.T. Graham, K.E. Broaders"
+	-publist[14].journal = "Biomacromolecules"
+	-publist[14].datepage = "Just Accepted Manuscript"
+	-publist[14].doi = "10.1021/acs.biomac.9b00215"
 
 	-var publistRev = publist.reverse()
 	.row
