Update news, members, map, and publications

--- a/index.jade
+++ b/index.jade
@@ -17,21 +17,18 @@ block content
 					.medium-11.medium-centered.columns
 						table.newslist
 							tr
-								td Apr '19
+								td Jul&nbsp;'19
+								td Amanda's
+									a(href='') paper on stable boronic esters for oxidation-triggered drug delivery
+									| &#32;has been accepted to ACS Applied Bio Materials!
+							tr
+								td May&nbsp;'19
+								td Congratulations to Emily on graduateing Summa Cum Laude in Chemistry!
+							tr
+								td May&nbsp;'19
+								td Congratulations to Amanda on graduating with High Honor in Biochemistry! 
+							tr
+								td Apr&nbsp;'19
 								td Emily's 
 									a(href='https://doi.org/10.1021/acs.biomac.9b00215') paper on spirocyclic acetalated dextran
 									| &#32;has been accepted to Biomacromolecules!
-							tr
-								td Mar '19
-								td Welcome to our newest member, Tracy!
-							tr
-								td Jan '19
-								td Welcome to our newest members, Ariel, Abby, and Maegan!
-							tr
-								td Dec '18
-								td Congratulations to Kate on graduating!
-							tr
-								td July '18
-								td Our NSF RUI on 
-									a(href='https://www.nsf.gov/awardsearch/showAward?AWD_ID=1808073') "Boronic Ester Modified Polysaccharides for Oxidation-Responsive Delivery Applications"
-									| &#32;was funded!
