--- a/scss/app.scss
+++ b/scss/app.scss
@@ -324,3 +324,23 @@ h4 {margin-top:0;}
 	margin-bottom:1rem;
 }
 #panel1{text-align:center;}
+
+.mapbox{
+	.panel{border:none !important};
+}
+.iframe-container {
+  overflow: hidden;
+  // Calculated from the aspect ratio of the content (in case of 16:9 it is 9/16= 0.5625)
+  padding-top: 75%;
+  position: relative;
+  margin-left:1rem;
+  margin-right:1rem;
+  iframe{
+      border: 0;
+      height: 100%;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 100%;
+  }
+}
