fixed typo and photo update

--- a/index.jade
+++ b/index.jade
@@ -23,7 +23,7 @@ block content
 									| &#32;has been accepted to ACS Applied Bio Materials!
 							tr
 								td May&nbsp;'19
-								td Congratulations to Emily on graduateing Summa Cum Laude in Chemistry!
+								td Congratulations to Emily on graduating Summa Cum Laude in Chemistry!
 							tr
 								td May&nbsp;'19
 								td Congratulations to Amanda on graduating with High Honor in Biochemistry! 
