--- a/people.jade
+++ b/people.jade
@@ -62,7 +62,7 @@ block content
 	-currentpeople.push({"email":"kapla26a"})
 	-currentpeople[curnum].name = "Abby Kaplan"
 	-currentpeople[curnum].year = "2021"
-	-currentpeople[curnum].majors = ["Chemistry"]
+	-currentpeople[curnum].majors = ["Biochemistry"]
 	-currentpeople[curnum].minors = ["Gender Studies"]
 	-curnum++
 	
